# prscope

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  env.example  prscope.features.yml  prscope.yml  pyproject.toml
.cursor/commands/: ci-check.md
.cursor/plans/: assess_search_loop_2d91db9c.plan.md
.github/workflows/: ci.yml
benchmarks/: README.md  prompts-1.json  prompts-10.json  prompts.json
benchmarks/configs/cheap/: prscope.yml
benchmarks/configs/prscope-self/: prscope.yml
benchmarks/results/: best_performance.json
benchmarks/results/history/: run-20260302T045848Z.json  run-20260302T051018Z.json  run-20260302T051630Z.json  run-20260302T052649Z.json  run-20260302T053128Z.json  run-20260302T053554Z.json  run-20260302T145239Z.json  run-20260302T150631Z.json
docs/: CORE_BELIEFS.md  DESIGN.md  FRONTEND.md  QUALITY_SCORE.md  README.md  agent-harness.md  decision-and-issue-graphs.md  memory-context-manifesto.md  planning-state-machine.md  skills-and-recall.md
docs/design-docs/: index.md
plans/E2E-Executor-Session/: PRD.md  RFC.md  conversation.md
plans/New-Plan-discovery/: PRD.md  conversation.md
prscope/: benchmark.py  cli.py  config.py  llm.py  memory.py  model_catalog.py  pricing.py  scoring.py  store.py
prscope/plan_templates/: plan.md.j2
prscope/planning/: __init__.py  core.py  executor.py  render.py
prscope/planning/runtime/: analytics_emitter.py  author.py  budget.py  clarification.py  compression.py  critic.py  discovery.py  orchestration.py  round_controller.py  state.py  telemetry.py  tools.py
prscope/planning/runtime/authoring/: __init__.py  discovery.py  pipeline.py  repair.py  validation.py
prscope/planning/runtime/events/: analytics_emitter.py
prscope/planning/runtime/pipeline/: round_context.py  stages.py
prscope/planning/runtime/review/: __init__.py  issue_causality.py  issue_similarity.py  manifesto_checker.py
prscope/planning/runtime/transport/: llm_client.py
prscope/planning/scanners/: __init__.py  base.py  grep.py  repomap.py  repomix.py
prscope/web/: __init__.py  api.py  events.py  server.py
prscope/web/frontend/: index.html  package-lock.json  package.json  test.html
prscope/web/frontend/src/: App.tsx  index.css  theme-test.css  theme-test2.css  theme-test3.css  types.ts
prscope/web/frontend/src/components/: ActionBar.tsx  ChatPanel.test.ts  ChatPanel.tsx  CritiqueCard.tsx  ModelSelector.tsx  OptionButtons.tsx  PlanPanel.tsx  ResizableLayout.tsx  ThemeToggle.tsx  ToolCallStream.tsx  chatPanelUtils.ts
prscope/web/frontend/src/hooks/: useSessionEvents.ts
prscope/web/frontend/src/lib/: api.ts
prscope/web/frontend/src/pages/: NewSession.tsx  PlanningView.test.ts  PlanningView.tsx  SessionList.tsx  planningViewUtils.ts
prscope/web/static/: index.html
prscope/web/static/assets/: _basePickBy-BhHNrGDl.js  _basePickBy-CIaarQ6J.js  _baseUniq-BZJXVE-0.js  _baseUniq-DsV_FuTX.js  arc-BysFg3AF.js  arc-Cs3d6IYO.js  architectureDiagram-VXUJARFQ-BjFXgwIH.js  architectureDiagram-VXUJARFQ-DypJ007l.js  blockDiagram-VD42YOAC-Bh2GoicS.js  blockDiagram-VD42YOAC-BwNGhyKB.js  c4Diagram-YG6GDRKO-4w_ZasvN.js  c4Diagram-YG6GDRKO-DxRT7SaL.js  channel-COULmVur.js  channel-CZXjVbJn.js  chunk-4BX2VUAB-BJBXdE2m.js  chunk-4BX2VUAB-C8YS9_P0.js  chunk-55IACEB6-BwZosGuZ.js  chunk-55IACEB6-C4FPDFah.js  chunk-B4BG7PRW-DE_10Tl1.js  chunk-B4BG7PRW-Di3FBU9e.js  chunk-DI55MBZ5-CXtSmpF3.js  chunk-DI55MBZ5-DUetXaq8.js  chunk-FMBD7UC4-BGe22AuI.js  chunk-FMBD7UC4-BalyJmGN.js  chunk-QN33PNHL-DFtr5Sgf.js  chunk-QN33PNHL-DQHsjW90.js  chunk-QZHKN3VN-CUAx12Bj.js  chunk-QZHKN3VN-DLSXOo0E.js  chunk-TZMSLE5B-BQb2kkSN.js  chunk-TZMSLE5B-BfNqKC33.js  classDiagram-2ON5EDUG-CtKYsHfj.js  classDiagram-v2-WZHVMYZB-DXKgo3ZR.js  clone-CWuvrfam.js  clone-CdUG-9QA.js  cose-bilkent-S5V4N54A-1LfdhdgZ.js  cose-bilkent-S5V4N54A-DEHukP7W.js  dagre-6UL2VRFP-B5JytWsE.js  dagre-6UL2VRFP-CAvWWhBk.js  diagram-PSM6KHXK-B00AElP4.js  diagram-PSM6KHXK-qsqEH_2q.js  (+59 more)
src/prscope/: __init__.py  cli.py  config.py  github.py  llm.py  memory.py  model_catalog.py  planner.py  pricing.py  profile.py  semantic.py
src/prscope/planning/: core.py  decision_catalog.py  executor.py  render.py
src/prscope/planning/runtime/: __init__.py  author.py  critic.py  discovery.py  model_policy.py  orchestration.py  round_controller.py  tools.py
src/prscope/planning/runtime/authoring/: discovery.py  models.py  pipeline.py  repair.py  validation.py
src/prscope/planning/runtime/context/: __init__.py  context_assembler.py
src/prscope/planning/runtime/discovery_support/: __init__.py  bootstrap.py  existing_feature.py  llm.py  models.py  refinement_evidence.py  signals.py
src/prscope/planning/runtime/events/: __init__.py  token_accounting.py  tool_event_state.py
src/prscope/planning/scanners/: repomix.py
src/prscope/store/: __init__.py  connection.py  file_stats.py  models.py  planning_commands.py  planning_history.py  planning_sessions.py  repo_data.py  schema.py  service.py
src/prscope/web/: __init__.py  api.py  server.py
src/prscope/web/frontend/: README.md  index.html  test-out-prose.css  test-out.css  vite.config.ts
src/prscope/web/static/: index.html
tests/: test_architecture.py  test_author_pipeline.py  test_cli.py  test_config.py  test_convergence_reasoner.py  test_critic_flow.py  test_decision_graph.py  test_discovery_generalized.py  test_discovery_parser.py  test_discovery_reasoner.py  test_followup_engine.py  test_github.py  test_impact_view.py  test_issue_graph_tracker.py  test_llm_provider_routing.py  test_manifesto_checker.py  test_memory_skills.py  test_model_catalog.py  test_model_overrides.py  test_model_policy.py  test_nonblocking_clarification.py  test_planning_core.py  test_planning_state_snapshot.py  test_pricing.py  test_profile.py  test_refinement_investigation.py  test_refinement_reasoner.py  test_review_reasoner.py  test_round_entry.py  test_runtime_refactor_m1.py  test_scoring.py  test_semantic.py  test_store.py  test_store_refactor_m1.py  test_web_api_models.py  test_web_async_round_jobs.py
(+285 files in other folders)
