[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prscope"
version = "0.1.0"
description = "Planning-first PR intelligence with adversarial PRD/RFC generation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Prscope" }
]
keywords = ["github", "planning", "rfc", "prd", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "requests>=2.31",
    "jinja2>=3.1",
    "litellm>=1.0",
    "python-dotenv>=1.0",
    "numpy>=1.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "rich>=13.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
prscope = "prscope.cli:main"
prscope-benchmark = "prscope.benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["prscope"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
