[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prscope"
version = "0.1.0"
description = "Planning-first PR intelligence with adversarial plan generation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Prscope" }
]
keywords = ["github", "planning", "rfc", "prd", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "requests>=2.31",
    "jinja2>=3.1",
    "litellm>=1.0",
    "python-dotenv>=1.0",
    "numpy>=1.24",
    "rank-bm25>=0.2.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "rich>=13.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
prscope = "prscope.cli:main"
prscope-benchmark = "prscope.benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prscope"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "asyncio: mark test as an async test (pytest-asyncio)",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# Intentional: load_dotenv / dynamic path before other imports
[tool.ruff.lint.per-file-ignores]
"src/prscope/cli.py" = ["E402", "E501"]
"src/prscope/web/__init__.py" = ["E402"]
"src/prscope/web/server.py" = ["E402", "E501"]
"src/prscope/llm.py" = ["E501"]
"src/prscope/planning/runtime/author.py" = ["E501"]
"src/prscope/planning/runtime/discovery.py" = ["E501"]
"src/prscope/planning/runtime/orchestration.py" = ["E501"]
"src/prscope/planning/runtime/tools.py" = ["E501"]
"src/prscope/web/api.py" = ["E501", "UP045"]
"src/prscope/planning/runtime/authoring/discovery.py" = ["E501"]
"src/prscope/planning/runtime/authoring/pipeline.py" = ["E501"]
"src/prscope/planning/runtime/authoring/repair.py" = ["E501"]
"src/prscope/planning/runtime/authoring/validation.py" = ["E501"]
"src/prscope/planning/runtime/critic.py" = ["E501"]
"src/prscope/planning/runtime/model_policy.py" = ["E501"]
"src/prscope/planning/runtime/orchestration_support/chat_flow.py" = ["E501"]
"src/prscope/planning/runtime/pipeline/stages.py" = ["E501"]
"src/prscope/planning/runtime/reasoning/convergence_reasoner.py" = ["E501"]
"src/prscope/planning/runtime/reasoning/refinement_reasoner.py" = ["E501"]
"src/prscope/planning/runtime/review/impact_view.py" = ["E501"]
"tests/test_author_pipeline.py" = ["E501"]
"tests/test_nonblocking_clarification.py" = ["E501"]
"tests/test_refinement_investigation.py" = ["E501"]
